# exercises

./: README.md
david/: CMakeLists.txt  poor_mans_cat.cpp  prime_factors.cpp  prompt_name.cpp  stack_language.cpp  trinary.cpp  wordcounter.cpp
genki/: CMakeLists.txt  hello_name.cpp  mimic.cpp  prime_factors.cpp  stack_lang.cpp  ternary.cpp  word_count.cpp
matthew/: CMakeLists.txt  echo.cpp  hello_person.cpp  prime_factors.cpp  stack_lang.cpp  trinary_to_decimal.cpp  word_count.cpp
patrick/: CMakeLists.txt  cat.cpp  factors.cpp  greeting.cpp  stack-lang.cpp  trinary.cpp  wc.cpp
patrick/t/: input_lesson4.1.in  input_lesson4.2.in  input_lesson4.3.in
